[i965,iris][bisected] piglit and glcts failures on multiple platforms
Issues began with mesa=eda3e4e0
Author: Eric Anholt <eric@anholt.net>
Date: Mon Oct 26 11:37:25 2020 -0700
nir/builder: Add a name format arg to nir_builder_init_simple_shader().
This cleans up a bunch of gross sprintfs and keeps the caller from needing
to remember to ralloc_strdup. I added a couple of '"%s", name ? name :
""' to radv where I didn't fully trace through whether a non-null name was
being passed in.
I also took the liberty of adding a basic name to a few shaders (pan_blit,
unit tests)
Reviewed-by: Rhys Perry <pendingchaos02@gmail.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/7323>
...
Test error output is blank, but test failures are listed at the bottom of this page: https://mesa-ci.01.org/mesa_master/builds/23202/group/63a9f0ea7bb98050796b649e85481845